<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin"
            android:gravity="center"
            android:background="@color/purple_500"
            android:textColor="@color/white"
            android:text="@string/main_result_title"
            android:layout_weight="1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin"
            android:textSize="@dimen/main_TextSize"
            android:gravity="center"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:text="@string/main_Valeur_IMC" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin"
            android:textSize="45dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="@string/main_Niveau_IMC" />







    </LinearLayout>
